fixed some error in time.js

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -566,12 +566,12 @@
 
 /* Handle */
 *::-webkit-scrollbar-thumb {
-    background: #020204;
+    background: #4759fe;
 }
 
 /* Handle on hover */
 *::-webkit-scrollbar-thumb:hover {
-    background: #4759fe;
+    background: #838fff;
 }
 
 /* Track */
