--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -75,7 +75,7 @@
                                     <h6 class="card-title">ABCDEFGHIJKLMNOPQRSTUVWXYZ</h6>
 
                                     <p class="card-title badge d-flex align-items-center p-1 pe-2 text-primary-emphasis bg-primary border border-primary rounded-pill">
-                                       Thant Htet Ko
+                                       Hnin Aye Lwin
                                       </p>
 
                                     <p class="card-title badge d-flex align-items-center p-1 pe-2 text-warning-emphasis bg-warning border border-warning rounded-pill">
